# convergence_study

./: DEVELOPMENT_CHECKLIST.md  README.md  pyproject.toml
src/: __init__.py  exceptions.py  mesh.py  numerics.py  report.py  standards.py  study.py  validation.py
src/convergence_verification_program/: __init__.py  config.py  exceptions.py  local_intra_tuple_convergence_utils.py  mesh.py  numerics.py  report.py  standards.py  study.py  validation.py
src/convergence_verification_program/study/: __init__.py  inter_tuple_analysis.py  intra_tuple_analysis.py
